# cmd/app/main.go
@@ -5,37 +5,44 @@ import (
 	"new-go-project/internal/database"
 	"new-go-project/internal/handlers"
 	"new-go-project/internal/messagesService"
-	"new-go-project/userService"
+	"new-go-project/internal/userService"
+	"new-go-project/internal/web1/messages"
+	"new-go-project/internal/web2/users"
 
 	"github.com/labstack/echo/v4"
+	"github.com/labstack/echo/v4/middleware"
 )
 
 func main() {
 	database.InitDB()
-	if err := database.DB.AutoMigrate(&messagesService.Message{}, &userService.User{}); err != nil {
-		log.Fatalf("AutoMigrate failed: %v", err)
+	if err := database.DB.AutoMigrate(&messagesService.Message{}); err != nil {
+		log.Fatalf("Ошибка миграции: %v", err)
+	} else if err := database.DB.AutoMigrate(&userService.User{}); err != nil {
+		log.Fatalf("Ошибка миграции: %v", err)
 	}
 
-	messageRepo := messagesService.NewMessageRepository(database.DB)
-	messageService := messagesService.NewMessageService(messageRepo)
+	messagesRepo := messagesService.NewMessageRepository(database.DB)
+	messagesService := messagesService.NewService(messagesRepo)
+	usersRepo := userService.NewUserRepository(database.DB)
+	usersService := userService.NewService(usersRepo)
 
-	messageHandler := handlers.MessageHandler{Service: messageService}
+	messagesHandler := handlers.NewMessageHandler(messagesService)
+	usersHandler := handlers.NewUserHandler(usersService)
 
-	userRepo := userService.NewUserRepository(database.DB)
-	userService := userService.NewUserService(userRepo)
-	userHandler := handlers.UserHandler{Service: userService}
-
+	// Инициализируем echo
 	e := echo.New()
 
-	e.GET("/messages", messageHandler.GetMessages)
-	e.POST("/messages", messageHandler.PostMessages)
-	e.PATCH("/messages/:id", messageHandler.PatchMessages)
-	e.DELETE("/messages/:id", messageHandler.DeleteMessages)
+	// используем Logger и Recover
+	e.Use(middleware.Logger())
+	e.Use(middleware.Recover())
 
-	e.GET("/users", userHandler.GetUsers)
-	e.POST("/users", userHandler.PostUsers)
-	e.PATCH("/users/:id", userHandler.PatchUserByID)
-	e.DELETE("/users/:id", userHandler.DeleteUserByID)
+	// Прикол для работы в echo. Передаем и регистрируем хендлер в echo
+	strictMessageHandler := messages.NewStrictHandler(messagesHandler, nil) // тут будет ошибка
+	messages.RegisterHandlers(e, strictMessageHandler)
+	strictUserHandler := users.NewStrictHandler(usersHandler, nil) // тут будет ошибка
+	users.RegisterHandlers(e, strictUserHandler)
 
-	e.Logger.Fatal(e.Start(":8080"))
+	if err := e.Start(":8080"); err != nil {
+		log.Fatalf("failed to start with err: %v", err)
+	}
 }
