# internal/handlers/userHandlers.go
@@ -1,80 +1,107 @@
 package handlers
 
 import (
-	"net/http"
-	"new-go-project/userService"
-	"strconv"
-
-	"github.com/labstack/echo/v4"
+	"context"
+	"errors"
+	"new-go-project/internal/userService" // Импортируем наш сервис
+	"new-go-project/internal/web2/users"  // Импортируем пакет users
 )
 
 type UserHandler struct {
 	Service *userService.UserService
 }
 
-func (h *UserHandler) GetUsers(c echo.Context) error {
-	users, err := h.Service.GetUsers()
-	if err != nil {
-		return c.JSON(http.StatusInternalServerError, err.Error())
+// Нужна для создания структуры UserHandler на этапе инициализации приложения
+func NewUserHandler(service *userService.UserService) *UserHandler {
+	return &UserHandler{
+		Service: service,
 	}
-	return c.JSON(http.StatusOK, users)
 }
 
-func (h *UserHandler) PostUsers(c echo.Context) error {
-	var user userService.User
-	if err := c.Bind(&user); err != nil {
-		return c.JSON(http.StatusBadRequest, err.Error())
+func (h *UserHandler) GetUsers(_ context.Context, _ users.GetUsersRequestObject) (users.GetUsersResponseObject, error) {
+	// Получение всех пользователей из сервиса
+	allUsers, err := h.Service.GetAllUsers()
+	if err != nil {
+		return nil, err
 	}
-	if err := h.Service.CreateUser(&user); err != nil {
-		return c.JSON(http.StatusInternalServerError, err.Error())
+
+	// Создаем переменную респон типа 200джейсонРеспонс
+	// Которую мы потом передадим в качестве ответа
+	response := users.GetUsers200JSONResponse{}
+
+	// Заполняем слайс response всеми пользователями из БД
+	for _, usr := range allUsers {
+		user := users.User{
+			Id:       &usr.ID,
+			Email:    &usr.Email,
+			Password: &usr.Password,
+		}
+		response = append(response, user)
 	}
-	return c.JSON(http.StatusCreated, user)
+
+	// САМОЕ ПРЕКРАСНОЕ. Возвращаем просто респонс и nil!
+	return response, nil
 }
 
-func (h *UserHandler) PatchUserByID(c echo.Context) error {
-	id, err := strconv.Atoi(c.Param("id"))
+func (h *UserHandler) PostUsers(_ context.Context, request users.PostUsersRequestObject) (users.PostUsersResponseObject, error) {
+	// Распаковываем тело запроса напрямую, без декодера!
+	userRequest := request.Body
+	// Обращаемся к сервису и создаем пользователя
+	userToCreate := userService.User{Email: *userRequest.Email, Password: *userRequest.Password}
+	createdUser, err := h.Service.CreateUser(userToCreate)
+
 	if err != nil {
-		return c.JSON(http.StatusBadRequest, "Invalid ID")
+		return nil, err
 	}
-
-	existingUser, err := h.Service.GetUserByID(uint(id))
-	if err != nil {
-		return c.JSON(http.StatusNotFound, "User not found")
+	// создаем структуру респонс
+	response := users.PostUsers201JSONResponse{
+		Id:       &createdUser.ID,
+		Email:    &createdUser.Email,
+		Password: &createdUser.Password,
 	}
-
-	var updateData userService.User
-	if err := c.Bind(&updateData); err != nil {
-		return c.JSON(http.StatusBadRequest, "Invalid request")
-	}
-
-	updates := make(map[string]interface{})
-	if updateData.Email != "" {
-		updates["email"] = updateData.Email
-	}
-	if updateData.Password != "" {
-		updates["password"] = updateData.Password
-	}
-
-	if err := h.Service.UpdateUserFields(existingUser.ID, updates); err != nil {
-		return c.JSON(http.StatusInternalServerError, "Failed to update user")
-	}
-
-	// Получаем обновленного пользователя для подтверждения изменений
-	updatedUser, err := h.Service.GetUserByID(uint(id))
-	if err != nil {
-		return c.JSON(http.StatusInternalServerError, "Failed to retrieve updated user")
-	}
-
-	return c.JSON(http.StatusOK, updatedUser)
+	// Просто возвращаем респонс!
+	return response, nil
 }
 
-func (h *UserHandler) DeleteUserByID(c echo.Context) error {
-	id, err := strconv.Atoi(c.Param("id"))
+func (h *UserHandler) PatchUsers(_ context.Context, request users.PatchUsersRequestObject) (users.PatchUsersResponseObject, error) {
+	// Распаковываем тело запроса напрямую, без декодера!
+	userRequest := request.Body
+	// Обращаемся к сервису и обновляем пользователя
+	userToUpdate := userService.User{Email: *userRequest.Email, Password: *userRequest.Password}
+	updatedUser, err := h.Service.UpdateUserByID(*userRequest.Id, userToUpdate)
+
 	if err != nil {
-		return c.JSON(http.StatusBadRequest, "Invalid ID")
+		return nil, err
 	}
-	if err := h.Service.DeleteUser(uint(id)); err != nil {
-		return c.JSON(http.StatusInternalServerError, "Failed to delete user")
+	// создаем структуру респонс
+	response := users.PatchUsers200JSONResponse{
+		Id:       &updatedUser.ID,
+		Email:    &updatedUser.Email,
+		Password: &updatedUser.Password,
 	}
-	return c.NoContent(http.StatusNoContent)
+	// Просто возвращаем респонс!
+	return response, nil
+}
+
+func (h *UserHandler) DeleteUsers(_ context.Context, request users.DeleteUsersRequestObject) (users.DeleteUsersResponseObject, error) {
+	// Распаковываем тело запроса напрямую, без декодера!
+	userRequest := request.Body
+	if userRequest == nil {
+		return nil, errors.New("userRequest is nil")
+	}
+
+	// Обращаемся к сервису и удаляем пользователя
+	deletedUser, err := h.Service.DeleteUserByID(*userRequest.Id)
+
+	if err != nil {
+		return nil, err
+	}
+	// создаем структуру респонс
+	response := users.DeleteUsers200JSONResponse{
+		Id:       &deletedUser.ID,
+		Email:    &deletedUser.Email,
+		Password: &deletedUser.Password,
+	}
+	// Просто возвращаем респонс!
+	return response, nil
 }
